# repo2nb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: sample_output.ipynb  sample_output_omit_instructions.ipynb
repo2nb/: __init__.py  __main__.py  cli.py  converter.py  git.py  notebook.py  traversal.py  warnings.py
tests/: test_converter.py  test_git.py  test_notebook.py  test_traversal.py
